# diva2

./: CMakeLists.txt  README.md
GroundStation/AlgorithmTesting/: CMakeLists.txt  Module_Function.cpp  Module_Function.h  Module_Input.cpp  Module_Input.h  Module_Input_CAM.h  global.h  main.cpp  output_video.avi
GroundStation/AlgorithmTesting/Algorithm/: model.py  output_video.avi
GroundStation/AlgorithmTesting/Algorithm/checkpoints/: moblilenet_lane_01.json
GroundStation/AlgorithmTesting_ka/: .qmake.stash  AlgorithmThread.cpp  AlgorithmThread.h  CMakeLists.txt  Makefile  ModelRunThread.cpp  ModelRunThread.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  moc_predefs.h  ui_mainwindow.h  untitiled1  untitiled1.pro
GroundStation/obj_detection/: yolov4_test.txt
GroundStation/obj_detection/darknet_dasol/: darknet.py
MobilePlatform/Sensing/: CMakeLists.txt  CamSensingThread.cpp  CanSensingThread.cpp  GpsSensingThread.cpp  ImuSensingThread.cpp  LiDAR_Sensing.cpp  LiDAR_Sensing.h  LiDAR_SensingThread.cpp  LiDAR_SensingThread.h  main.cpp
MobilePlatform/Visualization/: CamVisualization.cpp  CanVisualization.cpp  GpsVisualization.cpp  ImuVisualization.cpp  main.cpp
protobuf/: makeproto.sh  sensors.proto  sensors_pb2.py
test/lane_detection/: CMakeLists.txt
test/lane_detection/LaneDetector/: LaneDetector.cpp  demo.cpp
test/lane_detection2/: CMakeLists.txt  LaneDetect.cpp
test/lane_detection3/: CMakeLists.txt  LaneDetection.cpp  LaneDetection.h  Line.cpp  Line.h  README.md  main.cpp
test/lane_detection5/: Test_segmentation_model.py  imgds.npy  test_test.py
test/obj_detection/: test.py  yolov4_test.ipynb  yolov4_test.py
test/obj_detection/darknet_dasol/: CMakeLists.txt
test/protobuf/: sensors.pb-c.c  sensors.pb-c.h  sensors.proto
test/simple_pub/: CMakeLists.txt  main.c
test/simple_sub/: CMakeLists.txt  main.cpp
